crates/osp-core/tests/compile_fail/supersede_application_opacity_literal.stderr
error: cannot construct `SupersedeApplication` with struct literal syntax due to private fields
  --> tests/compile_fail/supersede_application_opacity_literal.rs:8:16
   |
 8 |     let _app = SupersedeApplication {
   |                ^^^^^^^^^^^^^^^^^^^^
 9 |         superseded: osp_core::anchoring::types::ConceptNodeId("x".into()),
   |         ----------------------------------------------------------------- private field
10 |         successor: osp_core::anchoring::types::ConceptNodeId("y".into()),
   |         ---------------------------------------------------------------- private field
   |
   = note: ...and other private fields `authority_level`, `basis`, `reason`, `session_id`, `operator` and `decided_at` that were not provided
help: you might have meant to use the `new` associated function
   |
 8 -     let _app = SupersedeApplication {
 9 -         superseded: osp_core::anchoring::types::ConceptNodeId("x".into()),
10 -         successor: osp_core::anchoring::types::ConceptNodeId("y".into()),
11 -     };
 8 +     let _app = SupersedeApplication::new(_, _, _, _, _, _, _, _);
   |
